# simple-vs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.sasm
sasm/: .clang-format  CMakeLists.txt  command.c  command.h  lexer.cpp  lexer.hpp  main.c  meson.build  parser.y  sasm.cpp
sasm-dev/: CMakeLists.txt  command.c  command.h  lexer.lex  main.c  meson.build  parser.y
sasm-dev/data/: list.c  list.h  test_list.c
sasm/.cache/clangd/index/: command.c.DE1E887F515E01C1.idx  command.h.B7737E26AAE76CAB.idx  main.c.7E741B1B4FA85749.idx
stack/: stack-vm.cpp
stack-vm/: CMakeLists.txt  main.c  main.cpp  meson.build  stack-vm.c  stack-vm.cpp  stack-vm.h  stack-vm.hpp
